# rollingsum

./: .gitignore  CMakeLists.txt  README.md  rollingsum.cpp  rollingsum.h  rollingsum.h.in  test.cpp
include/rollingsum/: rollingsum.hpp
src/: rollingsum.cpp
test/: CMakeLists.txt  test.cpp
